# block_demo

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/application/: ao.rs  chat_service.rs  mod.rs
src/domain/: dto.rs  mod.rs  svg_chat_service.rs
src/infra/: local_cache_util.rs  log.rs  mod.rs  screen_shot_util.rs  svg_util.rs
